fix input error icons with long messages (wrapped text)

--- a/client/src/styles/EmailInput.scss
+++ b/client/src/styles/EmailInput.scss
@@ -47,9 +47,13 @@
 
     span {
       display: flex;
-      align-items: center;
       font-size: 0.8125rem;
       color: #ba4300;
+
+      svg {
+        height: 0.875rem;
+        width: 0.875rem;
+      }
     }
   }
 }
