--- a/client/src/styles/Password.scss
+++ b/client/src/styles/Password.scss
@@ -62,6 +62,7 @@
   }
 
   .password-input-rule {
+    display: flex;
     @include body-standard;
 
     font-family: $wow-font !important;
@@ -92,9 +93,13 @@
 
     span {
       display: flex;
-      align-items: center;
       font-size: 0.8125rem;
       color: #ba4300;
+
+      svg {
+        height: 0.875rem;
+        width: 0.875rem;
+      }
     }
   }
 }
